--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
           USERNAME: ${{ github.repository_owner }}
       - name: Commit & Push
+        env:
+          TOKEN: ${{ secrets.TOKEN }}
         run: |
-          git config user.name JinhyeokKo
-          git config user.email jinhyeok.ko@outlook.com
+          git config user.name "JinhyeokKo"
+          git config user.email "jinhyeok.ko@outlook.com"
           git add -A .
           git commit -m "generated"
-          git push
+          git push https://JinhyeokKo:${{ secrets.TOKEN }}@github.com/JinhyeokKo/JinhyeokKo.git main
