--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: generate-github-profile-3d-contrib
+    permissions:
+      contents: write  # 명시적으로 권한 설정
     steps:
       - uses: actions/checkout@v3
       - uses: yoshi389111/github-profile-3d-contrib@0.7.1
@@ -19,8 +21,8 @@ jobs:
         env:
           TOKEN: ${{ secrets.TOKEN }}
         run: |
-          git config user.name "JinhyeokKo"
-          git config user.email "jinhyeok.ko@outlook.com"
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
           git add -A .
           git commit -m "generated"
-          git push https://JinhyeokKo:${{ secrets.TOKEN }}@github.com/JinhyeokKo/JinhyeokKo.git main
+          git push https://github-actions:${{ secrets.TOKEN }}@github.com/${{ github.repository_owner }}/${{ github.repository }}.git main
