--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,43 +1,19 @@
 name: Metrics
-
 on:
-  # Schedule updates (each hour)
-  schedule:
-    - cron: "0 * * * *"
-
-  # Lines below let you run workflow manually and on each commit
+  # Schedule daily updates
+  schedule: [{cron: "0 0 * * *"}]
+  # (optional) Run workflow manually
   workflow_dispatch:
-  push:
-    branches:
-      - master
-
+  # (optional) Run workflow when pushing on master/main
+  push: {branches: ["master", "main"]}
 jobs:
-  metrics:
+  github-metrics:
     runs-on: ubuntu-latest
-
+    environment: 
+      name: production
+    permissions:
+      contents: write
     steps:
-      - name: Checkout repository content
-        uses: actions/checkout@v2
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      - uses: lowlighter/metrics@latest
         with:
-          node-version: '16'
-
-      - name: Download metrics source
-        run: git clone https://github.com/lowlighter/metrics.git
-
-      - name: Generate metrics
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: |
-          cd metrics
-          node index.mjs --token ${{ secrets.GH_TOKEN }} --template classic --config ../base.json
-
-      - name: Commit and push changes
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "github-actions[bot]"
-          git add -A
-          git commit -m "Update metrics" || exit 0
-          git push
+          token: ${{ secrets.TOKEN }}
